Archive/a01a28a4427d6f1ff685d86a9215a85a-a4286dab954ca44891e920524d97c1aa/output
main.cpp:31:39: error: ISO C++ forbids declaration of 'operator=' with no type [-fpermissive]
   operator=(std::array<float, 2>& cont) {
                                       ^
main.cpp: In member function 'int Uniform::operator=(std::array<float, 2ul>&)':
main.cpp:36:3: warning: no return statement in function returning non-void [-Wreturn-type]
   }
   ^
